--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Favorite Web Sites</h1>
     
     <ul>
-      <li>GitHub</li>
-      <li>FreeCodeCamp</li>
-      <li>Manning Publications</li>
+      <li><a href="https://github.com">GitHub</a></li>
+      <li><a href="https://www.freecodecamp.org">FreeCodeCamp</a></li>
+      <li><a href="https://www.manning.com">Manning Publications</a></li>
     </ul>
     
     Hello there, awesome person!
